# systemd-tmpfiles

./: .gitignore  Cargo.toml  LICENSE  flake.nix  readme.md
examples/: example.conf
src/: lib.rs  main.rs
