[package]
name = "systemd-tmpfiles"
version = "0.2.5"
edition = "2024"

[dependencies]
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
file-mode = "0.1"
log = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
